style: use table to display extraTickings & fix header z-index

--- a/assets/styles/app/app.css
+++ b/assets/styles/app/app.css
@@ -78,3 +78,15 @@
     width: 100%;
     padding: 0 2em;
 }
+
+table{
+    border-collapse: collapse;
+}
+table th{
+    border-bottom: solid 1px var(--header-background-color);
+    padding: 0.3em 0.7em;
+}
+table td{
+    padding: 0.3em 0.7em;
+    border-bottom: solid 1px rgba(0,0,0,0.1);
+}
